--- a/doc/ex1_1.md
+++ b/doc/ex1_1.md
@@ -30,6 +30,11 @@
   
   (+ 2 (if (> b a) b a))  
   
+  (* (cond ((> a b) a)
+  ((< a b) b)
+  (else -1))
+  (+ a 1))
+  
 ### Решение
   10
 ; => 10
